--- a/config/sync/block.block.custom_theme_page_title.yml
+++ b/config/sync/block.block.custom_theme_page_title.yml
@@ -2,6 +2,8 @@ uuid: 9b53b708-8c53-4bf9-8fd4-bd782112a46d
 langcode: en
 status: true
 dependencies:
+  module:
+    - system
   theme:
     - custom_theme
 _core:
@@ -17,4 +19,8 @@ settings:
   label: 'Page title'
   label_display: '0'
   provider: core
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    negate: true
+    pages: /movies
