--- a/web/themes/custom/custom_theme/custom_theme.libraries.yml
+++ b/web/themes/custom/custom_theme/custom_theme.libraries.yml
@@ -5,3 +5,26 @@ global-styling:
       css/style.css: {}
   js:
     js/script.js: {}
+
+movie-slider:
+  version: 1.x
+  css:
+    theme:
+      //cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css: { type: external }
+      //cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css: {type: external}
+      //cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css: { type: external }
+      css/movie-slider.css: {}
+
+  js:
+    //cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js: { type: external }
+    js/movie-slider.js: {}
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/once
+
+movie-page:
+  version: 1.x
+  css:
+    theme:
+      css/movie-page.css: {}
