Movie-grid: Made changes as per reviewed.

--- a/config/sync/block.block.custom_theme_views_block__movies_block_2.yml
+++ b/config/sync/block.block.custom_theme_views_block__movies_block_2.yml
@@ -1,6 +1,6 @@
-uuid: 476a0bc2-1126-4fef-b9a0-1a97b0ea6517
+uuid: 3c0beda5-461c-4204-bfef-8d479ea99286
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - views.view.movies
@@ -9,14 +9,14 @@ dependencies:
     - views
   theme:
     - custom_theme
-id: custom_theme_views_block__movies_block_1
+id: custom_theme_views_block__movies_block_2
 theme: custom_theme
 region: content
 weight: 0
 provider: null
-plugin: 'views_block:movies-block_1'
+plugin: 'views_block:movies-block_2'
 settings:
-  id: 'views_block:movies-block_1'
+  id: 'views_block:movies-block_2'
   label: ''
   label_display: '0'
   provider: views
