--- a/web/themes/custom/custom_theme/custom_theme.libraries.yml
+++ b/web/themes/custom/custom_theme/custom_theme.libraries.yml
@@ -34,3 +34,15 @@ movie-grid:
   css:
     theme:
       css/movie-grid.css: {}
+  js:
+    js/movie-grid.js: {}
+  dependencies:
+    - core/drupal
+    - core/once
+    - core/jquery
+
+slider-block:
+  version: 1.x
+  css:
+    theme:
+      css/slider.css: {}
