--- a/config/sync/responsive_image.styles.test.yml
+++ b/config/sync/responsive_image.styles.test.yml
@@ -3,12 +3,12 @@ langcode: en
 status: true
 dependencies:
   config:
-    - image.style.grid_lg_180x150_
-    - image.style.grid_md_300x175_
+    - image.style.grid_sm_270x150
+    - image.style.grid_tab_240x150_
     - image.style.grid_tab_350x150_
-    - image.style.large
-    - image.style.max_1300x1300
     - image.style.movie_banner_1440x640_
+  theme:
+    - custom_theme
 id: test
 label: Test
 image_style_mappings:
@@ -17,12 +17,10 @@ image_style_mappings:
     image_mapping:
       sizes: '(min-width:320px) 300px, (min-width:768px) 700px, (min-width:1024px) 1000px'
       sizes_image_styles:
-        - grid_lg_180x150_
-        - grid_md_300x175_
+        - grid_sm_270x150
+        - grid_tab_240x150_
         - grid_tab_350x150_
-        - large
-        - max_1300x1300
-    breakpoint_id: responsive_image.viewport_sizing
+    breakpoint_id: custom_theme.screen.mobile-sm
     multiplier: 1x
-breakpoint_group: responsive_image
+breakpoint_group: custom_theme.screen
 fallback_image_style: movie_banner_1440x640_
